fix: text alignment

--- a/us/en/skymiles/styles/styles.css
+++ b/us/en/skymiles/styles/styles.css
@@ -309,93 +309,3 @@ main .default-content-wrapper .default-content-eyebrow + h2 {
     width: auto;
   }
 }
-
-.skymiles {
-  font-size: var(--body-font-size-m);
-}
-
-.skymiles .section {
-  padding: 0 30px;
-}
-
-.skymiles .hero-container + .section .default-content-wrapper:first-of-type h2:first-of-type ~ p {
-  font-size: 1.5rem;
-}
-
-.skymiles .default-content-wrapper {
-  font-family: var(--body-light-font-family);
-  font-size: 20px;
-  line-height: 28px;
-  text-align: left;
-}
-
-.skymiles .default-content-wrapper h1 {
-  margin: 0;
-  font-family: var(--heading-bold-font-family);
-  font-size: 15px;
-  letter-spacing: 1.4px;
-  line-height: 22px;
-}
-
-.skymiles .default-content-wrapper h2 {
-  position: relative;
-  margin: 0;
-  padding-bottom: 30px;
-  font-family: var(--heading-book-font-family);
-  font-size: 2.375rem;
-  line-height: 1.2em;
-}
-
-.skymiles .section:first-child .default-content-wrapper:first-of-type h2:first-of-type {
-  font-size: 52px;
-  line-height: 62px;
-}
-
-.skymiles .section:first-child .default-content-wrapper:first-of-type p {
-  font-size: 24px;
-}
-
-.skymiles .default-content-wrapper h2::after {
-  content: '';
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  border-bottom: 3px solid var(--color-delta-red);
-  width: 82px;
-}
-
-.skymiles .default-content-wrapper ol,
-.skymiles .default-content-wrapper ul {
-  font-size: 20px;
-  line-height: 34px;
-}
-
-.skymiles .default-content-wrapper li {
-  padding-bottom: 8px;
-}
-
-.skymiles .default-content-wrapper p picture:only-child {
-  width: 100%;
-  margin: 0 15px;
-}
-
-.skymiles .columns {
-  margin: 0 15px;
-}
-
-.skymiles .columns > div {
-  gap: 30px;
-}
-
-.skymiles .section.highlight {
-  margin: 0;
-  padding: 2.5rem 0;
-  max-width: none;
-  background-color: var(--color-delta-gray-light);
-}
-
-.skymiles .section.highlight:last-child .default-content-wrapper {
-  margin: 0 auto;
-  max-width: 45rem;
-  text-align: center;
-}
